--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,85 @@
-<h1>App Works with: {{ title }}</h1>
-
-
+<div class="container">
+  <br />
+  <h1>Pipes</h1>
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th>Variable</th>
+        <th>Pipe</th>
+        <th>Resultado</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>uppercase</td>
+        <td>{{ nombre | uppercase }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>lowercase</td>
+        <td>{{ nombre | lowercase }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>slice:3</td>
+        <td>{{ nombre | slice:3 }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>slice:0:3</td>
+        <td>{{ nombre | slice: 0:3 }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>slice:4:6</td>
+        <td>{{ nombre | slice: 4:6 }}</td>
+      </tr>
+      <tr>
+        <td>{{ arreglo }}</td>
+        <td>slice:1:5</td>
+        <td>{{ arreglo | slice: 1:5 }}</td>
+      </tr>
+      <tr>
+        <td>{{ PI }}</td>
+        <td>number: "1.0-2"</td>
+        <td>{{ PI | number: "1.0-2" }}</td>
+      </tr>
+      <tr>
+        <td>{{ a }}</td>
+        <td>percent: "2.2-2"</td>
+        <td>{{ a | percent: "2.2-2" }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>currency</td>
+        <td>{{ salario | currency }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>currency: "EUR"</td>
+        <td>{{ salario | currency: "EUR" }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>currency: "EUR"</td>
+        <td>{{ salario | currency: "EUR" }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>currency: "EUR":true:"4.0-0"</td>
+        <td>{{ salario | currency: "EUR":true:"4.0-0" }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>currency: "EUR":false:"4.0-0"</td>
+        <td>{{ salario | currency: "EUR":false:"4.0-0" }}</td>
+      </tr>
+      <tr>
+        <td>{{ salario }}</td>
+        <td>number: ".2-2" </td>
+        <td>{{ salario | number: ".2-2" }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
