--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,6 +80,51 @@
         <td>number: ".2-2" </td>
         <td>{{ salario | number: ".2-2" }}</td>
       </tr>
+      <tr>
+        <td>{{ valorDePromesa }}</td>
+        <td>async</td>
+        <td>{{ valorDePromesa | async }}</td>
+      </tr>
+      <tr>
+        <td>{{ fecha }}</td>
+        <td>date</td>
+        <td>{{ fecha | date }}</td>
+      </tr>
+      <tr>
+        <td>{{ fecha }}</td>
+        <td>date:"medium"</td>
+        <td>{{ fecha | date:"medium" }}</td>
+      </tr>
+      <tr>
+        <td>{{ fecha }}</td>
+        <td>date:"MMMM - dd"</td>
+        <td>{{ fecha | date:"MMMM - dd" }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre2 }}</td>
+        <td>capitalizado</td>
+        <td>{{ nombre2 | capitalizado }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre2 }}</td>
+        <td>capitalizado</td>
+        <td>{{ nombre2 | capitalizado: false }}</td>
+      </tr>
+      <tr>
+        <td>{{ nombre }}</td>
+        <td>
+            contrasena: {{ activar }}
+            <br />
+            <button
+                (click)="activar = !activar"
+                type="button"
+                class="btn btn-outline-primary"
+            >
+                Activar/Desactivar
+            </button>
+        </td>
+        <td>{{ nombre | contrasena: activar }}</td>
+      </tr>
     </tbody>
   </table>
 </div>
