--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
       <tr>
         <td>{{ nombre }}</td>
         <td>slice:3</td>
-        <td>{{ nombre | slice:3 }}</td>
+        <td>{{ nombre | slice: 3 }}</td>
       </tr>
       <tr>
         <td>{{ nombre }}</td>
@@ -77,7 +77,7 @@
       </tr>
       <tr>
         <td>{{ salario }}</td>
-        <td>number: ".2-2" </td>
+        <td>number: ".2-2"</td>
         <td>{{ salario | number: ".2-2" }}</td>
       </tr>
       <tr>
@@ -93,12 +93,12 @@
       <tr>
         <td>{{ fecha }}</td>
         <td>date:"medium"</td>
-        <td>{{ fecha | date:"medium" }}</td>
+        <td>{{ fecha | date: "medium" }}</td>
       </tr>
       <tr>
         <td>{{ fecha }}</td>
         <td>date:"MMMM - dd"</td>
-        <td>{{ fecha | date:"MMMM - dd" }}</td>
+        <td>{{ fecha | date: "MMMM - dd" }}</td>
       </tr>
       <tr>
         <td>{{ nombre2 }}</td>
@@ -113,18 +113,41 @@
       <tr>
         <td>{{ nombre }}</td>
         <td>
-            contrasena: {{ activar }}
-            <br />
-            <button
-                (click)="activar = !activar"
-                type="button"
-                class="btn btn-outline-primary"
-            >
-                Activar/Desactivar
-            </button>
+          contrasena: {{ activar }}
+          <br />
+          <button
+            (click)="activar = !activar"
+            type="button"
+            class="btn btn-outline-primary"
+          >
+            Activar/Desactivar
+          </button>
         </td>
         <td>{{ nombre | contrasena: activar }}</td>
       </tr>
     </tbody>
   </table>
+
+  <h4>Slice</h4>
+  <ul>
+    <li *ngFor="let item of arreglo | slice: 5:20">{{ item }}</li>
+  </ul>
+
+  <h4>JSON</h4>
+  <pre>
+    {{ persona | json }}
+  </pre>
+
+  <h4>Youtube <small>video</small></h4>
+  <hr />
+  <iframe
+    width="560"
+    height="315"
+    [src]="video | domseguro: 'https://www.youtube.com/embed/'"
+    frameborder="0"
+    allowfullscreen
+  >
+  </iframe>
 </div>
+
+<br /><br /><br /><br />
